--- a/webextensions/sidebar/styles/sound-button.css
+++ b/webextensions/sidebar/styles/sound-button.css
@@ -33,11 +33,16 @@ tab-sound-button::before {
   content: "";
   display: inline-block;
   height: calc(var(--sound-button-size) * 1.4);
-  left: calc(0px - (var(--sound-button-size) * 0.2));
   top: calc(0px - (var(--sound-button-size) * 0.2));
   width: calc(var(--sound-button-size) * 1.4);
   opacity: 0.95;
   position: absolute;
+}
+:root:not(.rtl) tab-sound-button::before {
+  left: calc(0px - (var(--sound-button-size) * 0.2));
+}
+:root.rtl tab-sound-button::before {
+  right: calc(0px - (var(--sound-button-size) * 0.2));
 }
 tab-sound-button:hover::before {
   opacity: 0.5;
@@ -54,9 +59,14 @@ tab-sound-button::after {
   fill: var(--tab-text-inverted);
   height: var(--sound-button-size);
   position: absolute;
-  right: 0;
   top: 0;
   width: var(--sound-button-size);
+}
+:root:not(.rtl) tab-sound-button::after {
+  right: 0;
+}
+:root.rtl tab-sound-button::after {
+  left: 0;
 }
 :root.simulate-svg-context-fill tab-sound-button::after {
   background: var(--tab-text-inverted);
@@ -129,6 +139,11 @@ tab-item.faviconized tab-sound-button {
   padding-block: 0;
   padding-inline: 0;
   position: absolute;
-  right: 0;
   top: calc(var(--sound-button-size) * 0.2); /* cancel negative margin of the background circle */
+}
+:root:not(.rtl) tab-item.faviconized tab-sound-button {
+  right: 0;
+}
+:root.rtl tab-item.faviconized tab-sound-button {
+  left: 0;
 }
