Apply correct indent properties for RTL environment #3689

--- a/webextensions/sidebar/styles/base.css
+++ b/webextensions/sidebar/styles/base.css
@@ -479,29 +479,47 @@ tab-item-substance .caption {
   position: static;
 }
 
-:root.left tab-item:not(.pinned) tab-item-substance {
+:root:not(.rtl).left tab-item:not(.pinned) tab-item-substance,
+:root.rtl.right tab-item:not(.pinned) tab-item-substance {
   margin-inline-start: calc(var(--tab-margin-inline-start) + var(--tab-indent));
 }
-
-/* auto-hidden scrollbar placeholder workaround */
-:root.left.shift-tabs-for-scrollbar-only-on-hover.on-scrollbar-area:hover
-  #tabbar.scrollbar-autohide
-  #normal-tabs-container.overflow tab-item:not(.pinned) tab-item-substance,
-:root.left:not(.shift-tabs-for-scrollbar-only-on-hover)
-  #tabbar.scrollbar-autohide
-  #normal-tabs-container.overflow tab-item:not(.pinned) tab-item-substance {
-  margin-inline-start: calc(var(--tab-margin-inline-start) + var(--tab-indent) + var(--shift-tabs-for-scrollbar-distance));
-}
-
-:root.right tab-item:not(.pinned) tab-item-substance {
+:root.rtl.left tab-item:not(.pinned) tab-item-substance,
+:root:not(.rtl).right tab-item:not(.pinned) tab-item-substance {
   margin-inline-end: calc(var(--tab-margin-inline-end) + var(--tab-indent));
 }
 
 /* auto-hidden scrollbar placeholder workaround */
-:root.right.shift-tabs-for-scrollbar-only-on-hover.on-scrollbar-area:hover
+:root:not(.rtl).left.shift-tabs-for-scrollbar-only-on-hover.on-scrollbar-area:hover
   #tabbar.scrollbar-autohide
   #normal-tabs-container.overflow tab-item:not(.pinned) tab-item-substance,
-:root.right:not(.shift-tabs-for-scrollbar-only-on-hover)
+:root:not(.rtl).left.shift-tabs-for-scrollbar-only-on-hover.on-scrollbar-area:hover
+  #tabbar.scrollbar-autohide
+  #normal-tabs-container.overflow tab-item:not(.pinned) tab-item-substance,
+:root.rtl.right:not(.shift-tabs-for-scrollbar-only-on-hover)
+  #tabbar.scrollbar-autohide
+  #normal-tabs-container.overflow tab-item:not(.pinned) tab-item-substance
+:root.rtl.right:not(.shift-tabs-for-scrollbar-only-on-hover)
+  #tabbar.scrollbar-autohide
+  #normal-tabs-container.overflow tab-item:not(.pinned) tab-item-substance, {
+  margin-inline-start: calc(var(--tab-margin-inline-start) + var(--tab-indent) + var(--shift-tabs-for-scrollbar-distance));
+}
+
+:root:not(.rtl).right tab-item:not(.pinned) tab-item-substance,
+:root.rtl.left tab-item:not(.pinned) tab-item-substance {
+  margin-inline-end: calc(var(--tab-margin-inline-end) + var(--tab-indent));
+}
+
+/* auto-hidden scrollbar placeholder workaround */
+:root:not(.rtl).right.shift-tabs-for-scrollbar-only-on-hover.on-scrollbar-area:hover
+  #tabbar.scrollbar-autohide
+  #normal-tabs-container.overflow tab-item:not(.pinned) tab-item-substance,
+:root:not(.rtl).right.shift-tabs-for-scrollbar-only-on-hover.on-scrollbar-area:hover
+  #tabbar.scrollbar-autohide
+  #normal-tabs-container.overflow tab-item:not(.pinned) tab-item-substance,
+:root.rtl.left:not(.shift-tabs-for-scrollbar-only-on-hover)
+  #tabbar.scrollbar-autohide
+  #normal-tabs-container.overflow tab-item:not(.pinned) tab-item-substance,
+:root.rtl.left:not(.shift-tabs-for-scrollbar-only-on-hover)
   #tabbar.scrollbar-autohide
   #normal-tabs-container.overflow tab-item:not(.pinned) tab-item-substance {
   margin-inline-end: calc(var(--tab-margin-inline-end) + var(--tab-indent) + var(--shift-tabs-for-scrollbar-distance));
