--- a/webextensions/sidebar/styles/drag-and-drop.css
+++ b/webextensions/sidebar/styles/drag-and-drop.css
@@ -50,13 +50,15 @@ tab-item:not(.faviconized)[data-drop-position="after"] tab-item-substance::befor
   right: 0;
 }
 
-tab-item.faviconized[data-drop-position="before"] tab-item-substance::before {
+:root:not(.rtl) tab-item.faviconized[data-drop-position="before"] tab-item-substance::before,
+:root.rtl tab-item.faviconized[data-drop-position="after"] tab-item-substance::before {
   bottom: 0;
   left: 0;
   top: 0;
 }
 
-tab-item.faviconized[data-drop-position="after"] tab-item-substance::before {
+:root:not(.rtl) tab-item.faviconized[data-drop-position="after"] tab-item-substance::before,
+:root.rtl tab-item.faviconized[data-drop-position="before"] tab-item-substance::before {
   bottom: 0;
   right: 0;
   top: 0;
