Show border of faviconized correctly on RTL environment #3689

--- a/webextensions/sidebar/styles/photon/base.css
+++ b/webextensions/sidebar/styles/photon/base.css
@@ -22,8 +22,11 @@ tab-item,
   margin-block-end: -1px;
 }
 
-tab-item.pinned tab-item-substance {
+:root:not(.rtl) tab-item.pinned tab-item-substance {
   border-width: 0 1px 1px 0;
+}
+:root.rtl tab-item.pinned tab-item-substance {
+  border-width: 0 0 1px 1px;
 }
 
 
