--- a/webextensions/sidebar/styles/favicon.css
+++ b/webextensions/sidebar/styles/favicon.css
@@ -183,16 +183,11 @@ tab-item[data-current-favicon-uri="chrome://global/skin/icons/warning.svg"] .fav
 
 tab-item.group-tab tab-favicon:not(.error) .favicon-image[src] {
   bottom: 0;
+  inset-inline-end: 0;
   max-height: 10px;
   max-width: 10px;
   position: absolute;
   z-index: var(--favicon-preferred-image-z-index);
-}
-:root:not(.rtl) tab-item.group-tab tab-favicon:not(.error) .favicon-image[src] {
-  right: 0;
-}
-:root.rtl tab-item.group-tab tab-favicon:not(.error) .favicon-image[src] {
-  left: 0;
 }
 
 
@@ -259,9 +254,9 @@ tab-item.faviconized:not(.active):not(.loading).sharing-screen .favicon-builtin:
 
 .favicon-sharing-state {
   bottom: calc((var(--favicon-size) - var(--svg-small-icon-size)) / 2);
-  left: calc((var(--favicon-size) - var(--svg-small-icon-size)) / 2);
+  inset-inline-start: calc((var(--favicon-size) - var(--svg-small-icon-size)) / 2);
+  inset-inline-end: calc((var(--favicon-size) - var(--svg-small-icon-size)) / 2);
   position: absolute;
-  right: calc((var(--favicon-size) - var(--svg-small-icon-size)) / 2);
   top: calc((var(--favicon-size) - var(--svg-small-icon-size)) / 2);
 }
 
@@ -301,14 +296,9 @@ tab-item.faviconized.sharing-screen .favicon-sharing-state::before {
 
 .favicon-sticky-state {
   --svg-small-icon-size: 12px;
+  inset-inline-start: calc(var(--svg-small-icon-size) - var(--favicon-size));
   position: absolute;
   top: calc(var(--svg-small-icon-size) - var(--favicon-size));
-}
-:root:not(.rtl) .favicon-sticky-state {
-  left: calc(var(--svg-small-icon-size) - var(--favicon-size));
-}
-:root.rtl .favicon-sticky-state {
-  left: calc(var(--svg-small-icon-size) - var(--favicon-size));
 }
 
 .favicon-sticky-state::before {
@@ -317,17 +307,12 @@ tab-item.faviconized.sharing-screen .favicon-sharing-state::before {
   content: "";
   display: inline-block;
   height: var(--svg-small-icon-size);
+  inset-inline-start: -10%;
   opacity: 0.75;
   position: absolute;
   top: 10%;
   transform: scale(1.3, 1.3);
   width: var(--svg-small-icon-size);
-}
-:root:not(.rtl) .favicon-sticky-state::before {
-  left: -10%;
-}
-:root.rtl .favicon-sticky-state::before {
-  right: -10%;
 }
 
 tab-item:not(.sticky) .favicon-sticky-state,
