--- a/webextensions/sidebar/styles/photon/photon.css
+++ b/webextensions/sidebar/styles/photon/photon.css
@@ -65,14 +65,14 @@ body,
 
     bottom: 0;
     content: "";
-    left: 0;
+    inset-inline-start: 0;
+    inset-inline-end: 0;
     margin-block: 0;
     margin-inline: 0;
     overflow: hidden;
     padding-block: 0;
     padding-inline: 0;
     position: fixed;
-    right: 0;
     top: 0;
     z-index: 20;
   }
