--- a/webextensions/sidebar/styles/sharing-state.css
+++ b/webextensions/sidebar/styles/sharing-state.css
@@ -60,15 +60,10 @@ tab-sharing-state::after {
   display: inline-block;
   fill: var(--sharing-state-color);
   height: var(--sharing-state-size);
+  inset-inline-end: 0;
   position: absolute;
   top: 0;
   width: var(--sharing-state-size);
-}
-:root:not(.rtl) tab-sharing-state::after {
-  right: 0;
-}
-:root.rtl tab-sharing-state::after {
-  left: 0;
 }
 :root.simulate-svg-context-fill tab-sharing-state::after {
   background: var(--sharing-state-color);
