--- a/webextensions/sidebar/styles/throbber.css
+++ b/webextensions/sidebar/styles/throbber.css
@@ -128,15 +128,10 @@ tab-item:not(.collapsed) .throbber {
 
 
 :root.blocking-throbber #blocking-screen .throbber {
+  inset-inline-start: calc(50% - var(--throbber-size));
   position: absolute;
   top: calc(50% - var(--throbber-size));
   transform: scale(2, 2);
-}
-:root.blocking-throbber:not(.rtl) #blocking-screen .throbber {
-  left: calc(50% - var(--throbber-size));
-}
-:root.blocking-throbber.rtl #blocking-screen .throbber {
-  right: calc(50% - var(--throbber-size));
 }
 
 :root.blocking-throbber #blocking-screen .throbber::before {
@@ -158,7 +153,7 @@ tab-item:not(.collapsed) .throbber {
   max-width: var(--progressbar-width);
   position: absolute;
   top: calc(50% + var(--throbber-size));
-  left: calc((100% - var(--progressbar-width)) / 2);
+  inset-inline-start: calc((100% - var(--progressbar-width)) / 2);
 }
 
 
